--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,4 +17,4 @@ spring.dubbo.protocol.name=dubbo
 #协议端口
 spring.dubbo.protocol.port=20880
 #扫描包路径,dubbo 服务类包目录
-spring.dubbo.scan=com.tianque.service.impl
+spring.dubbo.scan=com.hzh.service.impl
