--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.hikari.maximum-pool-size=20
 
 
 #mybatis
-mybatis.type-aliases-package=com.tianque.entity
+mybatis.type-aliases-package=com.hzh.entity
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
 #配置sql日志输出级别
