--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ mybatis.type-aliases-package=com.hzh.entity
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
 #配置sql日志输出级别
-logging.level.com.tianque.mapper=debug
+logging.level.com.hzh.mapper=debug
 
 #在该文件中通过以下配置方式来选择不同配置文件
 #该种方式在运行时会加载application-dev.properties文件
