--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,10 +26,20 @@ mybatis.type-aliases-package=com.hzh.entity
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
 #配置sql日志输出级别
-logging.level.com.hzh.mapper=debug
+logging.level.com.hzh.mapper=error
 
+#spring.thymeleaf.prefix=classpath:/templates/
+#禁用缓存
+spring.thymeleaf.cache=false
 #在该文件中通过以下配置方式来选择不同配置文件
 #该种方式在运行时会加载application-dev.properties文件
 
 spring.profiles.active=dev
 # 使用 java –jar xxx.jar --spring.profies.active=dev 方式 可以在命令行中选择要加载的配置文件
+
+#热部署生效
+spring.devtools.restart.enabled: true
+#设置重启的目录
+#spring.devtools.restart.additional-paths: src/main/java
+#classpath目录下的WEB-INF文件夹内容修改不重启
+spring.devtools.restart.exclude: WEB-INF/**
